--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,7 @@ trigger:
 - main
 
 pool:
-  #vmImage: ubuntu-latest
-  name: "Default"
+  vmImage: ubuntu-latest
 
 variables:
   buildConfiguration: 'Release'
