--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,7 @@ steps:
       arguments: '--no-restore --configuration Release'
       projects: '**/*.csproj'
 
-  - task: DotNetCore@2
+  - task: DotNetCoreCLI@2
     displayName: 'Publish the project - Release'
     inputs:
       command: 'publish'
@@ -60,5 +60,5 @@ steps:
 
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: drop'
-    condition: succeded()
+    condition: succeeded()
       
